# chat_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1_create_chat_user_9c10d536a11c_.py  1_refactor_chat_scheme_0c8a572c5131_.py  2_refactor_chat_scheme_0c8a572c5131_.py  3_create_message_fb96666c35ca_.py  4_message_refactoring_cab491b47f97_.py  5_message_idempotency_key_d31df410d013_.py  6_add_chat_relationship_time_pinned_547150faf467_.py  6_change_chat_relationship_is_pinned_to_time_pinned_3f191fbba15a_.py  7_add_devices_4a7a05f47a6f_.py
app/: main.py
app/api/: __init__.py  chats.py  contacts.py  exception_handlers.py  monitoring.py
app/api/chats/: __init__.py  routers.py  services.py
app/clients/: __init__.py
app/config/: __init__.py  application.py  cache.py  db.py  socketio.py  types.py  web.py
app/db/: __init__.py  enums.py  models.py  registry.py
app/schemas/: chats.py  common.py  contacts.py  sio.py
app/scripts/: check_socketio.py
app/services/: cache.py  chats.py  contacts.py  sio.py  utils.py
app/sio/: __init__.py  constants.py  views.py
tests/: conftest.py
tests/app/api/: test_chat_create.py  test_chats.py  test_monitoring.py
tests/app/db/: test_user.py  utils.py
tests/app/services/: test_cache.py
tests/app/sio/: test_connect.py  test_create_message.py  test_delete_message.py  test_edit_message.py  (+2 more)
tests/factories/: chats.py  db.py  schemas.py  utils.py
tests/fixtures/: client.py  db.py  migration.py
(+13 files in other folders)
