[tool.poetry]
name = "chat_template"
version = "0.1.0"
description = ""
authors = ["innokentiyzabirov"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.93.0"
python-socketio = "^5.8.0"
uvicorn = "0.20.0"
uvloop = "0.17.0"
loguru = "^0.6.0"
redis = "^4.5.1"
sqlalchemy = "2.0.6"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
python-socketio = {version = "^5.8.0", extras = ["asyncio-client"]}
requests = "^2.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
